--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -492,7 +492,8 @@ body.loading .overlay{
 		let messageTopDateRange = " Date Range: " +  document.getElementById("fromDate").value + "-" + document.getElementById("toDate").value;
 		switch (reportType) {
 			case 'USAGE_SUMMARY_BY_BASEPATH_BY_DATE_RANGE':
-				exportFileName= pretag + "Basepath" + tag;
+				var basePathValue = document.getElementById("basepath").value;
+				exportFileName= pretag + "Basepath" + tag + "_" + basePathValue.substring(1);
 				reportHeaderTitle= "Data Archival Usage Report for Basepath: " + document.getElementById("basepath").value + ", " + messageTopDateRange;
 				break;
 			case 'USAGE_SUMMARY_BY_DOC_BY_DATE_RANGE':
