HPCDATAMGM-1921: User name missing on the header row of the User Excel Report

--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -503,7 +503,7 @@ body.loading .overlay{
 				break;
 			case 'USAGE_SUMMARY_BY_USER_BY_DATE_RANGE':
 				exportFileName= pretag + "User" + tag;
-				reportHeaderTitle = "Data Archival Usage Report for User: " + document.getElementById("user").value + ", " + messageTopDateRange;
+				reportHeaderTitle = "Data Archival Usage Report for User: " + userselected + ", " + messageTopDateRange;
 				break;
 			case 'USAGE_SUMMARY_BY_DATE_RANGE':
 				exportFileName= pretag + "Summary" + tag;
