HPCDATAMGM-1922: Add NIH user ID to the name of the User Excel Report

--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -502,7 +502,7 @@ body.loading .overlay{
 				reportHeaderTitle = "Data Archival Usage Report for DOC: " + document.getElementById("doc").value + ", " + messageTopDateRange;
 				break;
 			case 'USAGE_SUMMARY_BY_USER_BY_DATE_RANGE':
-				exportFileName= pretag + "User" + tag;
+				exportFileName= pretag + "User" + tag + "_" + userselected;
 				reportHeaderTitle = "Data Archival Usage Report for User: " + userselected + ", " + messageTopDateRange;
 				break;
 			case 'USAGE_SUMMARY_BY_DATE_RANGE':
