--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -95,7 +95,7 @@
   display: none;
   position: absolute;
   background-color: #f1f1f1;
-  min-width: 160px;
+  min-width: 148px;
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -478,8 +478,11 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
 		    contentType: 'application/json',
 		    dataType: 'json',
 		    success : function(msg) {
+				if(msg.code == "400") {
+					alert(msg.message);
+				}
 			},
-			error : function(e) {
+			error : function(msg) {
 				 console.log(JSON.stringify(e));
 			}
 		});
@@ -677,7 +680,7 @@ window.onclick = function(event) {
 										</div>
 										<a id="exportEmailLink2"
 										class="btn btn-link btn-sm" ng-click="exportByEmail()"
-										>Email Export</a>	  
+										>&nbsp;&nbsp;&nbsp;Email Export</a>	  
 									  </div>
 									</div>
 
