HPCDATAMGM-1928: Fix issue for download tasks not appearing for user role

--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -275,7 +275,7 @@ tfoot input {
 	$(document).ready(function(){
 		var checkBox = document.getElementById("allcheckbox");
 		var queryAll = true;
-		if (checkBox.checked == false){
+		if (checkbox && checkBox.checked == false){
 			queryAll = false;
 		}
 
