--- a/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/downloadtaskboard.html
@@ -277,6 +277,11 @@ tfoot input {
 		var queryAll = true;
 		if (checkBox && checkBox.checked == false){
 			queryAll = false;
+		} else if (checkBox && checkBox.checked == true){
+			queryAll = true;
+		} else {
+			// User Role
+			queryAll = false;
 		}
 
 		/* This is for sorting to ignore the empty strings.
