HPCDATAMGM-1934:  Empty user column removed for user role

--- a/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
@@ -289,6 +289,11 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridConstants', f
 		var queryAll = true;
 		if (checkBox && checkBox.checked == false){
 			queryAll = false;
+		} else if (checkBox && checkBox.checked == true){
+			queryAll = true;
+		} else {
+			// User Role
+			queryAll = false;
 		}
 
 		$('#resultsGrid thead tr')
