--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -106,9 +106,21 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  text-align: left;
 }
 
 .dropdown a:hover {background-color: #ddd;}
+
+.isDisabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+.isDisabled > a {
+  color: currentColor;
+  display: inline-block;  /* For IE11/ MS Edge bug */
+  pointer-events: none;
+  text-decoration: none;
+}
 
 .show {display: block;}
 </style>
@@ -651,58 +663,65 @@ window.onclick = function(event) {
 					<div class="col-lg-12 col-md-12" ng-controller="MainCtrl">
 						<div class="panel panel-default">
 							<div class="panel-heading">
-							  <div class="row">
-								<div class="pull-left">
-									<h2 align="left">
-										<i class="fa fa-list-alt red"></i><strong>Collection
-											Search Results</strong>
-									</h2>
-								</div>
-								<div class="pull-right">
-									<a data-toggle="modal" id="savesearchlink"
-										class="btn btn-link btn-sm" href="/savesearch"
-										data-target="#myModal">Save Search Criteria</a>
-									<a id="editsearchlink"
-										class="btn btn-link btn-sm" ng-click="editSearch()"
-										>Edit Search Criteria</a>
-									<div class="dropdown">
-									  <button onclick="myFunction()" class="dropbtn">Export Search Results &#62;</button>
-									  <div id="myDropdown" class="dropdown-content">
-									  	<div id="showExportLink">
-											<a id="exportLink"
-											class="btn btn-link btn-sm" ng-click="export()"
-											>File Export</a>
-										</div>
-									  	<div id="hideExportLink">
-											<a id="exportLink"
-											class="btn btn-link btn-sm" style="pointer-events: none"
-											>File Export</a>
-										</div>
-										<a id="exportEmailLink2"
-										class="btn btn-link btn-sm" ng-click="exportByEmail()"
-										>&nbsp;&nbsp;&nbsp;Email Export</a>	  
-									  </div>
+								<div class="row">
+									<div class="pull-left">
+										<h2 align="left">
+											<i class="fa fa-list-alt red"></i><strong>Collection
+												Search Results</strong>
+										</h2>
 									</div>
-
-									<a id="bulkUpdate"
-										class="btn btn-link btn-sm" ng-click="bulkUpdate()"
-										>Update Metadata on All Search Results </a>
+									<div class="pull-right">
+										<a data-toggle="modal" id="savesearchlink"
+											class="btn btn-link btn-sm" href="/savesearch"
+											data-target="#myModal">Save Search Criteria</a> <a
+											id="editsearchlink" class="btn btn-link btn-sm"
+											ng-click="editSearch()">Edit Search Criteria</a>
+										<div class="dropdown">
+											<button onclick="myFunction()" class="dropbtn">Export
+												Search Results &#62;</button>
+											<div id="myDropdown" class="dropdown-content">
+												<div id="showExportLink">
+													<a id="exportLink" class="btn btn-link btn-sm"
+														ng-click="export()">File Export</a>
+												</div>
+												<div id="hideExportLink">
+													<span class="isDisabled"><a id="exportLink"
+														class="btn btn-link btn-sm">File Export</a></span>
+												</div>
+												<div id="exportEmailLinkId">
+													<a id="exportEmailLink2" class="btn btn-link btn-sm"
+														ng-click="exportByEmail()">Email Export</a>
+												</div>
+											</div>
+										</div>
+										<a id="bulkUpdate" class="btn btn-link btn-sm"
+											ng-click="bulkUpdate()">Update Metadata on All
+											Search Results </a>
+									</div>
 								</div>
-							  </div>
-							  <div class="row" style="background-color: #fff;border-top: 1px solid #ccc;border-bottom: none;">
-							    <div class="pull-left">
-									<a data-toggle="modal" id="downloadCollectionslink"
-										class="btn btn-link btn-sm" ng-click="performActionSelectedRows('download')"
-										><i class="fa fa-download" title="Download Selected Collections"></i></a>
-									<a data-toggle="modal" id="bulkPermissionlink"
-										class="btn btn-link btn-sm" ng-click="performActionSelectedRows('permission')"
-										><i class="fa fa-users" title="Manage Permissions on Selected Collections"></i></a>
-									<a data-toggle="modal" id="bulkMetadataUpdatelink"
-										class="btn btn-link btn-sm" ng-click="performActionSelectedRows('updatemetadata')"
-										><i class="fa fa-edit" title="Manage Metadata Updates on Selected Collections"></i></a>
-									<label id="totalSizeLabel" class="btn btn-sm" style="display:none">Total Size of Selected Collections: <strong id="totalSizeDisplay"></strong></label>
+								<div class="row"
+									style="background-color: #fff; border-top: 1px solid #ccc; border-bottom: none;">
+									<div class="pull-left">
+										<a data-toggle="modal" id="downloadCollectionslink"
+											class="btn btn-link btn-sm"
+											ng-click="performActionSelectedRows('download')"><i
+											class="fa fa-download" title="Download Selected Collections"></i></a>
+										<a data-toggle="modal" id="bulkPermissionlink"
+											class="btn btn-link btn-sm"
+											ng-click="performActionSelectedRows('permission')"><i
+											class="fa fa-users"
+											title="Manage Permissions on Selected Collections"></i></a> <a
+											data-toggle="modal" id="bulkMetadataUpdatelink"
+											class="btn btn-link btn-sm"
+											ng-click="performActionSelectedRows('updatemetadata')"><i
+											class="fa fa-edit"
+											title="Manage Metadata Updates on Selected Collections"></i></a>
+										<label id="totalSizeLabel" class="btn btn-sm"
+											style="display: none">Total Size of Selected
+											Collections: <strong id="totalSizeDisplay"></strong>
+										</label>
+									</div>
 								</div>
-							  </div>
 								<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
 									aria-labelledby="myModalLabel" aria-hidden="true">
 									<div class="modal-dialog">
@@ -711,14 +730,14 @@ window.onclick = function(event) {
 									</div>
 									<!-- /.modal-dialog -->
 								</div>
-								<div class="modal fade" id="downloadModal" tabindex="-1" role="dialog"
-									aria-labelledby="myModalLabel" aria-hidden="true">
+								<div class="modal fade" id="downloadModal" tabindex="-1"
+									role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 									<div class="modal-dialog">
 										<div class="modal-content"></div>
 										<!-- /.modal-content -->
 									</div>
 									<!-- /.modal-dialog -->
-								</div>	
+								</div>
 							</div>
 							<!--panel-body start-->
 							<div class="panel-body">
