HPCDATAMGM-1932: allow users to choose how directory structure is created at their destination endpoint

--- a/src/hpc-web/src/main/resources/templates/download.html
+++ b/src/hpc-web/src/main/resources/templates/download.html
@@ -105,6 +105,29 @@
 						</div>
 						</td></tr>
 						<tr><td>&nbsp;</td></tr>
+						<tr><td>Destination Hierarchy:</td></tr>
+						<tr>
+							<td>
+								<div class="form-group" id="radioset">
+										<div class="pull-left" style="margin-left: 15px">
+											<label class="radio-inline"><input type="radio"
+											name="downloadDestinationType" id="downloadToDestinationId" value="downloadToDestination" checked
+											/>Download To Destination</label>
+										</div>
+										<div class="pull-left" style="margin-left: 15px">
+											<label class="radio-inline"><input type="radio"
+											name="downloadDestinationType" id="createCollectionFolderId" value="createCollectionFolder"
+											/>Create Collection Folder</label>
+										</div>
+										<div class="pull-left" style="margin-left: 15px">
+											<label class="radio-inline"><input type="radio"
+											name="downloadDestinationType" id="createFullPathId" value="createFullPath"
+											/>Create Full Path</label>
+										</div>
+								</div>
+							</td>
+						</tr>
+						<tr><td>&nbsp;</td></tr>
 						<tr>
 							<td>
 								<div class="alert alert-info pull-left" role="alert" id="message"
@@ -117,6 +140,7 @@
 								</div>
 							</td>
 						</tr>
+						<tr><td>Transfer Type:</td></tr>
 						<tr>
 							<td>
 								<div class="form-group" id="radioset">
