--- a/src/hpc-web/src/main/resources/templates/download.html
+++ b/src/hpc-web/src/main/resources/templates/download.html
@@ -104,22 +104,24 @@
 							<label th:text="${downloadFilePath}"></label> 
 						</div>
 						</td></tr>
-						<tr><td>&nbsp;</td></tr>
-						<tr><td>Destination Hierarchy:</td></tr>
+						<div th:if="${downloadType == 'collection'}">
+							<tr><td>&nbsp;</td></tr>
+							<tr><td>Destination Hierarchy:</td></tr>
+						</div>
 						<tr>
 							<td>
-								<div class="form-group" id="radioset">
-										<div class="pull-left" style="margin-left: 15px">
+								<div class="form-group" id="radioset2">
+										<div class="pull-left" style="margin-left: 15px" th:if="${downloadType == 'collection'}">
 											<label class="radio-inline"><input type="radio"
 											name="downloadDestinationType" id="downloadToDestinationId" value="downloadToDestination" checked
 											/>Download To Destination</label>
 										</div>
-										<div class="pull-left" style="margin-left: 15px">
+										<div class="pull-left" style="margin-left: 15px" th:if="${downloadType == 'collection'}">
 											<label class="radio-inline"><input type="radio"
 											name="downloadDestinationType" id="createCollectionFolderId" value="createCollectionFolder"
 											/>Create Collection Folder</label>
 										</div>
-										<div class="pull-left" style="margin-left: 15px">
+										<div class="pull-left" style="margin-left: 15px" th:if="${downloadType == 'collection'}">
 											<label class="radio-inline"><input type="radio"
 											name="downloadDestinationType" id="createFullPathId" value="createFullPath"
 											/>Create Full Path</label>
