--- a/src/hpc-web/src/main/resources/templates/header.html
+++ b/src/hpc-web/src/main/resources/templates/header.html
@@ -43,6 +43,7 @@
 					<ul class="dropdown-menu extended logout">
 						<div class="log-arrow-up"></div>
 						<li class="eborder-top"><a href="https://wiki.nci.nih.gov/display/DMEdoc" target="_blank"><i class="icon_book_alt"></i> User Guide</a></li>
+						<li class="eborder-top"><a href="https://wiki.nci.nih.gov/display/DMEdoc/Frequently+Asked+Questions" target="_blank"><i class="icon_book_alt"></i> Frequently Asked Questions</a></li>
 						<li><a href="https://github.com/CBIIT/HPC_DME_APIs" target="_blank"><i class="icon_key_alt"></i> DME Site on GitHub</a></li>
 					</ul></li>
 					<li class="nav-item versionNumber"><a href="">
