HPCDATAMGM-1936: Fix issue of Email export anchor underline being slightly longer

--- a/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
@@ -703,7 +703,7 @@ window.onclick = function(event) {
 													</span>
 												</div>
 												<div id="exportEmailLinkId">
-													<a id="exportEmailLink2" class="btn btn-link btn-sm"
+													<a id="exportEmailLink2" class="btn btn-link btn-sm" style="display: inline-block;"
 														ng-click="exportByEmail()">Email Export</a>
 												</div>
 											</div>
