--- a/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresultdetail.html
@@ -689,7 +689,7 @@ window.onclick = function(event) {
 														class="btn btn-link btn-sm">File Export</a></span>
 												</div>
 												<div id="exportEmailLinkId">
-													<a id="exportEmailLink2" class="btn btn-link btn-sm"
+													<a id="exportEmailLink2" class="btn btn-link btn-sm" style="display: inline-block;"
 														ng-click="exportByEmail()">Email Export</a>
 												</div>
 											</div>
