--- a/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsearchresultdetail.html
@@ -107,7 +107,7 @@
   text-align: left;
 }
 
-.dropdown a:hover {background-color: #ddd;}
+.dropdown a:hover {background-color: #97BDD6;}
 
 .isDisabled {
   cursor: not-allowed;
@@ -703,7 +703,7 @@ window.onclick = function(event) {
 													</span>
 												</div>
 												<div id="exportEmailLinkId">
-													<a id="exportEmailLink2" class="btn btn-link btn-sm" style="display: inline-block;"
+													<a id="exportEmailLink2" class="btn btn-link btn-sm"
 														ng-click="exportByEmail()">Email Export</a>
 												</div>
 											</div>
