Change to lower case

--- a/src/hpc-web/src/main/resources/templates/download.html
+++ b/src/hpc-web/src/main/resources/templates/download.html
@@ -114,7 +114,7 @@
 										<div class="pull-left" style="margin-left: 15px" th:if="${downloadType == 'collection'}">
 											<label class="radio-inline"><input type="radio"
 											name="downloadDestinationType" id="downloadToDestinationId" value="downloadToDestination" checked
-											/>Download To Specified Folder</label>
+											/>Download to Specified Folder</label>
 										</div>
 										<div class="pull-left" style="margin-left: 15px" th:if="${downloadType == 'collection'}">
 											<label class="radio-inline"><input type="radio"
