1929: Remove 50 page size for non-detailed searches

--- a/src/hpc-web/src/main/resources/templates/collectionsearchresult.html
+++ b/src/hpc-web/src/main/resources/templates/collectionsearchresult.html
@@ -93,7 +93,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', 'uiGridGroupingConst
     enableRowSelection : true,
     enableSelectAll : true,
     treeRowHeaderAlwaysVisible: false,
-    paginationPageSizes: [50, 100, 500, 1000, 5000],
+    paginationPageSizes: [100, 500, 1000, 5000],
     paginationPageSize: parseInt(currentPageSize),
     paginationCurrentPage: parseInt(currentPage),
     columnDefs: [
