--- a/src/hpc-web/src/main/resources/templates/dataobjectsearchresult.html
+++ b/src/hpc-web/src/main/resources/templates/dataobjectsearchresult.html
@@ -99,7 +99,7 @@
           enableRowSelection : true,
           enableSelectAll : true,
           treeRowHeaderAlwaysVisible : false,
-          paginationPageSizes: [50, 100, 500, 1000, 5000],
+          paginationPageSizes: [100, 500, 1000, 5000],
           paginationPageSize: parseInt(currentPageSize),
           paginationCurrentPage: parseInt(currentPage),
           columnDefs : [
